# example-iot-hue-ssdp

./: CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
src/: App.cpp  AppComponent.hpp  DeviceDescriptorComponent.hpp  SwaggerComponent.hpp
src/connection/: SimpleUDPConnectionProvider.cpp  SimpleUDPConnectionProvider.hpp
src/controller/: HueDeviceController.hpp  SsdpController.hpp
src/db/: Database.cpp  Database.hpp
src/db/model/: HueDevice.hpp
src/dto/: GenericResponseDto.hpp  HueDeviceDto.hpp  UserRegisterDto.hpp
test/: tests.cpp
utility/: install-oatpp-modules.sh
